this is 2 version

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <em> hi</em>
 <u> komla nuka</u>
 <b> hy komal </b>
+<h3> this is version2</h3>
 <strong> hy komal</strong>
 <!--  bold -->
 <hr> hy komak naula 
